@@ -1413,9 +1413,12 @@ cmd_cl(key_info_t key_info, keys_info_t *keys_info)
 {
 	if(curr_view->selected_files > 1)
 	{
-		flist_set_marking(curr_view, 0);
+		flist_set_marking(curr_view, /*prefer_current=*/0);
 	}
-
+	else
+	{
+		clear_marking(curr_view);
+	}
 	curr_stats.save_msg = fops_retarget(curr_view);
 }
 
